Select Sex of the friend and display it

--- a/src/components/FriendListItem.css
+++ b/src/components/FriendListItem.css
@@ -19,7 +19,8 @@
 }
 
 :local(.btnAction), :local(.btnAction):active, :local(.btnAction):focus, :local(.btnAction):hover {
-  margin-right: 5px;
+  margin: 2px;
+  width: 40px;
   color: #5C75B0;
 }
 
